third-party/rust/crates/better_default/1.0.5/tests/compile_fail/enum/attribute_on_variant_fields_but_not_on_variant_itself.rs
use better_default::Default;

#[derive(Default)]
enum Enum2 {
    Variant {
        #[default(1)]
        first: u32,
        #[default("aaaaaa".to_string())]
        second: String,
    },

    #[default]
    Variant2,

    Variant3,
}

fn main() {}